# terminal-forecast-harness

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
src/: command_predictor.rs  lib.rs  resource_predictor.rs  workflow_anomaly.rs
